# CacheAnalyzer---Cache-Simulator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Cache.cpp  Cache.h  CacheDefinitions.h  CacheIQ.cpp  CacheStatistics.cpp  CacheStatistics.h  CacheTrace.cpp  CacheTrace.h  Logger.cpp  Logger.h  MainMemory.cpp  MainMemory.h  MemorySystem.cpp  MemorySystem.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  ReplacementAlgorithms.cpp  ReplacementAlgorithms.h  SystemDefinitions.h
traces/: cache_trace_best_case.cmt  cache_trace_common_case.cmt  cache_trace_worst_case.cmt
